2008-07-01  kitone  <kitone@gna.org>

	* src/Document.cc:
	* src/Document.h:
	* src/Subtitle.cc:
	* src/Subtitle.h:
	Introduce frame support. 
	Method for time and frame.

2008-07-01  kitone  <kitone@gna.org>

	* src/SubtitleModel.cc:
	* src/SubtitleModel.h:
	Introduce new real values for the time. 
	start_value, end_value, duration_value.

2008-07-01  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/TimeUtility.cc:
	* src/TimeUtility.h:
	Add TimeUtility files.
	Required for added support of the frames in subtitleeditor.

2008-07-01  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h:
	Add function string_to_long.

2008-06-24  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-06-24  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.21.3 release.

2008-06-24  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop:
	Add MimeType.

	* src/Options.cc:
	* src/Options.h:
	* src/gui/Application.cc:
	Added option to open a file (-f --file).
	There is a glibmm bug (#526831) between the version 2.15.3 and 2.16.2.

2008-06-22  kitone  <kitone@gna.org>

	* src/vp/VideoPlayer.cc:
	Fix Play/Pause button.
	Playing without taking into account subtitles.

2008-06-17  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	Fix #10494 (https://gna.org/bugs/?10494). 
	Disable actions during editing. Enable at the exit.

2008-06-17  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-06-16  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.21.2 release.

2008-06-16  kitone  <kitone@gna.org>

	* src/formats/SubtitleASS.cc:
	* src/formats/SubtitleMPsub.cc:
	* src/formats/SubtitleSSA.cc:
	Fix: Website url.

2008-06-13  kitone  <kitone@gna.org>

	* src/actions/DeleteSubtitleSelect.cc:
	* src/actions/DocumentManagement.cc:
	* src/actions/JoinDocument.cc:
	* src/utility.h:
	Fix: gettext plural support patch by petr pisar.

2008-06-12  kitone  <kitone@gna.org>
