@@ -160,6 +160,16 @@ protected:
 	 */
 
 	/*
+	 *
+	 */
+	void create_column_time( 
+					const Glib::ustring &name, 
+					const Glib::ustring &label, 
+					const Gtk::TreeModelColumnBase& column_attribute,
+					const sigc::slot<void, const Glib::ustring&, const Glib::ustring&> &slot, 
+					const Glib::ustring &tooltips=Glib::ustring());
+
+	/*
 	 *	retourne le nom utiliser en interne de la column
 	 */
 	Glib::ustring get_name_of_column(Gtk::TreeViewColumn *column);
